Metal-ANGLE: Shared memory texture tests failing in iOS Simulator https://bugs.webkit.org/show_bug.cgi?id=222685

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-04-16
Reviewed by Dean Jackson.

Simulator-only path drives filling textures via Blit encoders instead of mapped memory.
This workaround fixes dropped texture writes when using replaceRegion

* src/libANGLE/renderer/metal/TextureMtl.mm:
* src/libANGLE/renderer/metal/mtl_utils.mm:
(rx::mtl::InitializeTextureContents):

Canonical link: https://commits.webkit.org/236672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276190 268f45cc-cd09-0410-ab3c-d52691b4dbfc